--- a/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/utilities/macros.html
@@ -51,6 +51,41 @@
 	</div>
 {% endmacro %}
 
+{% macro display_level(level, small) %}
+	<div class="level{% if small == 'true' %} level-small{% endif %}">
+		<div class="level-wrap">
+			<span class="level-name">Level</span>
+			{% set zero = level < 10 ? '0' : ''  %}
+			<span class="level-value">{{ zero }}{{ level }}</span>
+		</div>
+	</div>
+{% endmacro %}
+
+{% macro display_stats(hp, mp, hp_loss, mp_loss, small) %}
+	{% if hp || mp %}
+		{% set remaining_hp = hp - hp_loss %}
+		{% set remaining_mp = mp - mp_loss %}
+		<div class="stats{% if small == 'true' %} stats-small{% endif %}">
+			{% if hp %}
+				<div class="stat-bar stat-bar-small hp-bar">
+					<div class="stat-bar-inner" style="width: {{ ((remaining_hp / hp) * 100) | number_format(2) }}%"></div>
+					<div class="stat-bar-label">
+						{{ remaining_hp }} / {{ hp }} HP
+					</div>
+				</div>
+			{% endif %}
+			{% if mp %}
+				<div class="stat-bar stat-bar-small mp-bar">
+					<div class="stat-bar-inner" style="width: {{ ((remaining_mp / mp) * 100) | number_format(2) }}%"></div>
+					<div class="stat-bar-label">
+						{{ remaining_mp }} / {{ mp }} MP
+					</div>
+				</div>
+			{% endif %}
+		</div>
+	{% endif %}
+{% endmacro %}
+
 {% macro create_pie_chart(title, type, data, total) %}
 	{% if data %}
 		{% set previous_value = 0 %}
