--- a/khyeras/_dev/styles/khyeras_v1/template/partials/viewtopic_character_details.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/viewtopic_character_details.html
@@ -1,37 +1,9 @@
 <dd class="profile-character-wrapper">
 	{% for post in postrow.khy %}
 		<div class="character-card">
-			<div class="level level-small">
-				<div class="level-wrap">
-					<span class="level-name">Level</span>
-					{% set zero = post.PROFILE_LEVEL < 10 ? '0' : ''  %}
-					<span class="level-value">{{ zero }}{{ post.PROFILE_LEVEL }}</span>
-				</div>
-			</div>
-			{% if postrow.S_PROFILE_C_HP || postrow.S_PROFILE_C_MP %}
-				{% set remaining_hp = post.PROFILE_STATS['hp'] - postrow.PROFILE_C_HP_VALUE %}
-				{% set remaining_mp = post.PROFILE_STATS['mp'] - postrow.PROFILE_C_MP_VALUE %}
-				<div class="stats stats-small">
-					{% if postrow.S_PROFILE_C_HP %}
-						<div class="stat-bar stat-bar-small hp-bar">
-							<div class="stat-bar-inner" style="width: {{ ((remaining_hp / post.PROFILE_STATS['hp']) * 100) | number_format(2) }}%"></div>
-							<div class="stat-bar-label">
-								{{ remaining_hp }} / {{ post.PROFILE_STATS['hp'] }} {{ postrow.PROFILE_C_HP_NAME }}
-							</div>
-						</div>
-					{% endif %}
-					{% if postrow.S_PROFILE_C_MP %}
-						<div class="stat-bar stat-bar-small mp-bar">
-							<div class="stat-bar-inner" style="width: {{ ((remaining_mp / post.PROFILE_STATS['mp']) * 100) | number_format(2) }}%"></div>
-							<div class="stat-bar-label">
-								{{ remaining_mp }} / {{ post.PROFILE_STATS['mp'] }} {{ postrow.PROFILE_C_MP_NAME }}
-							</div>
-						</div>
-					{% endif %}
-				</div>
-			{% endif %}
+			{{ function.display_level(post.PROFILE_LEVEL, 'true') }}
+			{{ function.display_stats(post.PROFILE_STATS['hp'], post.PROFILE_STATS['mp'], postrow.PROFILE_C_HP_VALUE, postrow.PROFILE_C_MP_VALUE, 'true') }}
 		</div>
-
 		{{ function.display_currency(post.PROFILE_CURRENCY) }}
 	{% endfor %}
 
