--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_layout.scss
@@ -818,7 +818,7 @@ dl.details {
 }
 
 .postprofile dt.has-avatar .avatar-container > .avatar, #page-welcome .user-profile .user-avatar .image-wrap,
-.excerpt .excerpt-image .image-wrap, .styled-listing .topiclist > li.row dl[class*='forum'].has-forum-image dt .forum-image {
+.excerpt .excerpt-image .image-wrap, .styled-listing .topiclist > li.row dl[class*='forum'].has-forum-image dt .forum-image, .card-grid .card-block .user-avatar .image-wrap {
 	border: 5px solid $color-01;
 	border-radius: 100%;
 	overflow: hidden;
@@ -828,7 +828,7 @@ dl.details {
 }
 
 .postprofile dt.has-avatar .avatar-container > .avatar, #page-welcome .user-profile .user-avatar .image-wrap,
-.excerpt .excerpt-image .image-wrap {
+.excerpt .excerpt-image .image-wrap, .card-grid .card-block .user-avatar .image-wrap {
 	height: 0;
 	padding-bottom: calc(100% - 10px);;
 	position: relative;
