--- a/khyeras/_dev/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/navbar_header.html
@@ -3,7 +3,7 @@
 		<div class="site-logo-text">
 			<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
 		</div>
-		<div class="mobile-menu-button">
+		<button class="mobile-menu-button button-link" type="button">
 			<div class="button-section">
 				<i class="icon rpg-icon rpg-pokecog" aria-hidden="true"></i>
 				<span class="mobile-menu-label mobile-menu-text">Menu</span>
@@ -26,7 +26,7 @@
 					</div>
 				<!-- ENDIF -->
 			<!-- ENDIF -->
-		</div>
+		</button>
 		<!-- INCLUDE partials/nav_menu_01.html -->
 		<!-- INCLUDE partials/nav_menu_02.html -->
 	</div>
