--- a/khyeras/ext/displaycoffee/khyeras/styles/prosilver/template/event/ucp_agreement_terms_after.html
+++ b/khyeras/ext/displaycoffee/khyeras/styles/prosilver/template/event/ucp_agreement_terms_after.html
@@ -1,4 +1,4 @@
 <h5>Important Notice:</h5>
 <p>
-	<strong>Potential forum members must be 18 or over to register for Khy'eras as our content may or may not contain adult situations.</strong> There are no exceptions to this ruling. If a person registers and is found to be under the age of 18, the account will be deactivated or deleted. After turning 18, the person may return to the forum. For more information, please see our <a href="./about-rules">rules page</a>, specifically the section "On Writing", Number 2.
+	<strong>Potential forum members must be 18 or over to register for Khy'eras as our content may or may not contain adult situations.</strong> There are no exceptions to this ruling. If a person registers and is found to be under the age of 18, the account will be deactivated or deleted. After turning 18, the person may return to the forum. For more information, please see our <a href="{{ ROOT_PATH }}about-rules">rules page</a>, specifically the section "On Writing", Number 2.
 </p>
