--- a/khyeras/styles/khyeras_v1/template/partials/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/partials/header_welcome.html
@@ -39,13 +39,13 @@
 						<div class="toggle-buttons">
 							<div class="flex-row flex-row-10">
 								<div class="toggle-links flex-column">
-									<button class="button toggle-button" data-toggle-type="welcome" data-toggle-id="9999" data-toggle-name="news" data-toggle-state="false" data-toggle-mobile="true">
+									<button class="button toggle-button" type="button" data-toggle-type="welcome" data-toggle-id="9999" data-toggle-name="news" data-toggle-state="false" data-toggle-mobile="true">
 										<i class="icon rpg-icon rpg-hunting-horn" aria-hidden="true"></i><span>News</span>
 									</button>
 								</div>
 								{% if SCRIPT_NAME == 'index' %}
 									<div class="toggle-featured flex-column">
-										<button class="button toggle-button" data-toggle-type="welcome" data-toggle-id="9999" data-toggle-name="featured" data-toggle-state="false" data-toggle-mobile="true">
+										<button class="button toggle-button" type="button" data-toggle-type="welcome" data-toggle-id="9999" data-toggle-name="featured" data-toggle-state="false" data-toggle-mobile="true">
 											<i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i><span>Featured</span>
 										</button>
 									</div>
