--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -95,7 +95,7 @@
 			<!-- EVENT overall_header_navbar_before -->
 			<nav id="mobile-menu">
 				<header class="mobile-menu-header">
-					<span class="mobile-header">Menu</span>
+					<span class="mobile-header khy-text h3">Menu</span>
 					<i class="icon fa-close" aria-hidden="true"></i>
 				</header>
 				<div class="mobile-menu-content"></div>
