--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_mixins.scss
@@ -267,9 +267,13 @@
 }
 
 // Common spectral font styles
-@mixin spectral-common {
+@mixin spectral-common($lh: '') {
+	@if ($lh != 'false') {
+		line-height: 1.1;
+	}
 	font-family: $font-02;
 	font-variant: small-caps;
+	font-weight: normal;
 }
 
 // Transition
