--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_viewlisting.scss
@@ -60,6 +60,7 @@
 				dt a {
 					@include spectral-common;
 					font-size: rem(22px);
+					@include position($type: relative, $top: 2.5px);
 				}
 			}
 		}
