--- a/khyeras/styles/khyeras_v1/template/partials/content_leveling.html
+++ b/khyeras/styles/khyeras_v1/template/partials/content_leveling.html
@@ -1,7 +1,7 @@
 {% set max_level = 60 %}
 {% set level_mods = range(25, 50, 0.5) %}
 
-{% set card_objects = [] %}
+{% set card = [] %}
 
 {% for i in range(1, max_level) %}
 	{% set modifier_index = ((i / 5) | round(0, 'ceil') - 1) %}
@@ -21,24 +21,67 @@
 	{% endif %}
 
 	{% set cards_add = [{
-		title : 'Level ' ~ ((i < 10) ? '0' : '') ~ i,
+		title : 'Level ' ~ ((i < (10)) ? '0' : '') ~ i,
 		icon : icon,
 		experience : experience ? experience : '&#48;',
 		bonus : bonus
 	}] %}
 
-	{% set card_objects = card_objects | merge(cards_add) %}
+	{% set card = card | merge(cards_add) %}
 {% endfor %}
 
-{% set new_cards = {
-	'Levels' : card_objects
-} %}
-
-{% set completed_cards = [] %}
 {% if KHY_USER_LEVEL %}
+	{% set completed_cards = [] %}
 	{% for i in range(1, KHY_USER_LEVEL) %}
-		{% set completed_cards = completed_cards | merge(['levels-level-' ~ ((i < 10) ? '0' : '') ~ i]) %}
+		{% set current_level = 'levels-level-' ~ ((i < (10)) ? '0' : '') ~ i %}
+		{% set completed_cards = completed_cards | merge([current_level]) %}
 	{% endfor %}
 {% endif %}
 
-{{ function.loop_cards(new_cards, completed_cards, KHY_SCRIPT_NAME) }}
+{% if completed_cards %}
+	<section class="page-content-section">
+		<div class="card-filter">
+			<button class="card-filter-button toggle-button-show button-link" type="button">
+				<i class="icon rpg-icon rpg-pokecog"></i>
+				<span>completed levels</span>
+			</button>
+		</div>
+	</section>
+{% endif %}
+
+{% set section_id = 'levels' %}
+<section class="page-content-section">
+	<div class="card-grid">
+		{% for detail in card %}
+			{% set card_id = section_id  ~ '-' ~ function.create_handle(detail.title) %}
+			{% set card_changed = (completed_cards && card_id in completed_cards) ? true : false %}
+			<div id="{{ card_id }}" class="card-block{% if card_changed %} card-changed card-opacity{% endif %}">
+				<h5 class="card-title">{{ detail.title }}</h5>
+				<div class="icon-wrapper">
+					<i class="icon icon-round {{ detail.icon }}" aria-hidden="true"></i>
+				</div>
+				<div class="card-description">
+					{% if card_changed %}
+						<span class="card-completed-text">
+							<i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i> Level complete!
+						</span>
+					{% endif %}
+					<span class="card-description-wrapper">Requirements and details on {{ detail.title | replace({'Level': 'level'}) }} are listed below.</span>
+				</div>
+				<div class="card-clear"></div>
+				{% if detail.experience || detail.bonus %}
+					<dl class="details details-small">
+						{% if detail.experience %}
+							<dt>Experience:</dt>
+							<dd>{{ detail.experience }}</dd>
+						{% endif %}
+						{% if detail.bonus %}
+							<dt>Bonus:</dt>
+							<dd>{{ detail.bonus }}</dd>
+						{% endif %}
+					</dl>
+				{% endif %}
+			</div>
+		{% endfor %}
+	</div>
+</section>
