--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_faq.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_faq.html
@@ -1,8 +1,12 @@
 {% set faq = {
-	'Starting Out' : [
+	'Getting Started' : [
 		{
 			q : 'Is there an approval process before I can start writing?',
 			a : 'There is no approval process and if you are feeling confident, start writing whenever you would like. If you do want a character\'s profile reviewed before diving in, <a href="./viewtopic.php?f=28&t=62">submit a request</a>.'
+		},
+		{
+			q : 'I\'m a little overwhelmed and don\'t know where to begin.',
+			a : 'Do have a peek at our <a href="./about-getting-started">Getting Started</a> guide, in particular the "<a href="./about-getting-started#beginning-the-journey">Beginning the Journey</a>" section. This page informs players of account fields available during registration and explains where to discover open threads so a new person can immerse themselves into something existing (if they so choose). We recommend reading a substantial chunk of the lore (<a href="./lore-history">History</a>, <a href="./lore-races">Races</a>, and <a href="./setting">Setting</a> to get the best ideas). Also, our lovely community generates tons of ideas, so craft a thread in "<a href="./viewforum.php?f=28">Plotting and Tracking</a>" or if you prefer chat, join us on <a href="//discord.gg/MXtzbmw" target="_blank">Discord</a>.<br /><br />The "<a href="./about-rules#on-writing">On Writing</a>" section in <a href="./about-rules">Rules</a> has several additional points to consider before writing, so be sure to take note of these.'
 		}
 	],
 	'Game Content' : [
@@ -17,7 +21,7 @@
 		{
 			q : 'Could I use Khy\'eras to run a D&D/Pathfinder/etc. campaign outside of the forum?',
 			a : 'Absolutely! In the distant future, Memoria would like to craft Pathfinder companion for Khy\'eras and its races, but this is not currently in the works.'
-		}		
+		}
 	],
 	'Character Content' : [
 		{
@@ -34,7 +38,7 @@
 		},
 		{
 			q : 'Well, can I still ask about "xyz"? Maybe I just missed something.',
-			a : 'Of course. Questions are welcome by contacting staff either <a href="./memberlist.php?mode=contactadmin">through the forum</a> or <a href="//discord.gg/MXtzbmw">Discord</a>.'
+			a : 'Of course. Questions are welcome by contacting staff either <a href="./memberlist.php?mode=contactadmin">through the forum</a> or Discord.'
 		},
 		{
 			q : 'Can my character come from a wealthy or noble bloodline?',
